<resources>
    <string name="app_name">Lab04</string>
    <string name="edtName_Hint_Value">Enter Name</string>
    <string name="edtEmail_Hint_Value">Enter Email</string>
    <string name="edtPassword_Hint_Value">Enter Password</string>
    <string name="edtReTypePassword_Hint_Value">Re Enter Password</string>
    <string name="btnSubmit_value">SUBMIT</string>
    <string name="Cancel_btn_value">CANCEL</string>
</resources>